# technical-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  kraken_api_response.json  kraken_private_api_response.json
assets/: XBTUSD.json
tests/features/: private.feature  public.feature
tests/steps/: common.rs  lib.rs  private.rs  public.rs
