[package]
name = "technical_test"
version = "0.1.0"
edition = "2021"

[dependencies]
cucumber = "0.21.0"
gherkin = "0.14.0"
blocking = "1.6.1"
base64 = "0.13"
chrono = "0.4"
crc32fast = "1.3"
displaydoc = "0.1"
env_logger = "0.9"
futures = "0.3.19"
hmac = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
serde_with = "1.6"
sha2 = "0.9.9"
rust_decimal = "1.17"
structopt = "0.3"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.16", optional = true, features = ["native-tls"] }
url = "2.2"
rustfix = "0.8.2"

[[test]]
harness = false
name = "public"
path = "tests/steps/public.rs"

[[test]]
harness = false
name = "private"
path = "tests/steps/private.rs"
